--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -5,18 +5,18 @@
   </ion-list-header>
   <button ion-item color="secondary" class="text-1x" tappable (click)="close()">
   	<ion-icon name="mail"></ion-icon>
-  	New booking success!
+  	Payment Received from John Doe!
   </button>
   <button ion-item color="secondary" class="text-1x" tappable (click)="close()">
   	<ion-icon name="mail"></ion-icon>
-  	Activity rescheduled
+  	Payment Received from Jane Doe!
   </button>
   <button ion-item class="text-1x" tappable (click)="close()">
   	<ion-icon name="mail-open" color="secondary"></ion-icon>
-  	<span ion-text color="secondary">Activity rescheduled</span>
+  	<span ion-text color="secondary">Payment Request Sent</span>
   </button>
   <button ion-item class="text-1x" tappable (click)="close()">
   	<ion-icon name="mail-open" color="secondary"></ion-icon>
-  	<span ion-text color="secondary">Activity rescheduled</span>
+  	<span ion-text color="secondary">Payment Request Sent</span>
   </button>
 </ion-list>
