--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -34,7 +34,7 @@
         </div>
       </ion-card>
 
-    <ion-card tappable (click)="doPay()">
+    <ion-card tappable (click)="doPayhome()">
       
            
         <img src="https://images.unsplash.com/photo-1534497977663-a73dfabd7774?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2ffa16299d8b0a0b021cde843304374d&auto=format&fit=crop&w=687&q=80"/>
