--- a/src/pages/sendpay/sendpay.html
+++ b/src/pages/sendpay/sendpay.html
@@ -55,13 +55,15 @@
           </ion-item>
         </ion-col>
 
-      <ion-item>
-          <ion-label floating>
-            <ion-icon name="card" item-start class="text-primary"></ion-icon>
-            CVV
-          </ion-label>
-          <ion-input type="text"></ion-input>
-      </ion-item>
+        <ion-col col-6>
+          <ion-item>
+              <ion-label floating>
+                <ion-icon name="card" item-start class="text-primary"></ion-icon>
+                CVV
+              </ion-label>
+              <ion-input type="text"></ion-input>
+          </ion-item>
+        </ion-col>
     </ion-row>
 
       <ion-item>
