--- a/src/pages/trips/trips.html
+++ b/src/pages/trips/trips.html
@@ -40,8 +40,8 @@
             <div class="col">xxxx-1234</div>
             <div class="col" col-2>11/21</div>
             <div class="col" col-4>
-              <button ion-button small tappable (click)="doPayFilled()"><ion-icon name="cash" ></ion-icon></button>
-              <button ion-button small tappable (click)="" color="danger"><ion-icon name="trash" ></ion-icon></button>
+              <button ion-button small tappable (click)="doFilled()"><ion-icon name="cash" ></ion-icon></button>
+              <button ion-button small tappable color="danger"><ion-icon name="trash" ></ion-icon></button>
             </div>
             
           </div>
