clean up ion-headers, adjust app-settings page, get filled paypage modal popping up correctly

--- a/src/pages/sendpay/sendpay.html
+++ b/src/pages/sendpay/sendpay.html
@@ -16,9 +16,7 @@
         <button ion-button tappable (click)="presentNotifications($event)">
           <ion-icon name="notifications"></ion-icon>
         </button>
-        <button ion-button tappable (click)="goToAccount()">
-          <ion-icon name="cog"></ion-icon>
-        </button>
+        
       </ion-buttons>
     </ion-navbar>
   </ion-header>
@@ -88,6 +86,14 @@
             Zip Code
           </ion-label>
           <ion-input type="text"></ion-input>
+      </ion-item>
+
+      <ion-item>
+          <ion-label floating>
+            <ion-icon name="cash" item-start class="text-primary"></ion-icon>
+            Amount
+          </ion-label>
+          <ion-input type="text" value="$0.00"></ion-input>
       </ion-item>
 
       <button ion-button block>Submit</button>
