--- a/src/pages/sendpay/sendpay.html
+++ b/src/pages/sendpay/sendpay.html
@@ -10,7 +10,7 @@
         <ion-icon name="menu"></ion-icon>
       </button>
       <ion-title>
-        <strong>Pay / Add Card</strong>
+        <strong>Add Card On File</strong>
       </ion-title>
       <ion-buttons end>
         <button ion-button tappable (click)="presentNotifications($event)">
@@ -88,13 +88,7 @@
           <ion-input type="text"></ion-input>
       </ion-item>
 
-      <ion-item>
-          <ion-label floating>
-            <ion-icon name="cash" item-start class="text-primary"></ion-icon>
-            Amount
-          </ion-label>
-          <ion-input type="text" value="$0.00"></ion-input>
-      </ion-item>
+      
 
       <button ion-button block>Submit</button>
     </form>
