--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -31,19 +31,19 @@
 
     <ion-card>
       <button ion-button icon-start block no-margin color="dark" class="round big" tappable (click)="doRequest()">
-        <ion-icon name="money"></ion-icon> Request
+        <ion-icon name=""></ion-icon> Request
       </button>
     </ion-card>
 
     <ion-card>
       <button ion-button icon-start block no-margin color="light" class="round big" tappable (click)="doReports()">
-        <ion-icon name="money"></ion-icon> Reports
+        <ion-icon name=""></ion-icon> Reports
       </button>
     </ion-card>
     
     <ion-card>
       <button ion-button icon-start block no-margin color="danger" class="round" tappable (click)="goToAccount()">
-        <ion-icon name="search"></ion-icon> Settings
+        <ion-icon name=""></ion-icon> Settings
       </button>
     </ion-card>
 
