--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -6,14 +6,14 @@
     <div padding text-center>
       <div class="logo"></div>
       <h2 ion-text class="text-primary">
-        <strong>PaidYET Mobile</strong> Alpha
+        
       </h2>
     </div>
 
     <!-- Login form -->
     <form class="list-form">
       <ion-item>
-        <ion-label floating>
+        <ion-label stacked>
           <ion-icon name="person" item-start class="text-primary"></ion-icon>
           Full Name
         </ion-label>
@@ -21,7 +21,7 @@
       </ion-item>
 
       <ion-item>
-        <ion-label floating>
+        <ion-label stacked>
           <ion-icon name="mail" item-start class="text-primary"></ion-icon>
           Email
         </ion-label>
@@ -29,7 +29,7 @@
       </ion-item>
 
       <ion-item>
-        <ion-label floating>
+        <ion-label stacked>
           <ion-icon name="lock" item-start class="text-primary"></ion-icon>
           Password
         </ion-label>
@@ -66,8 +66,8 @@
     </div>
 
     <!-- Other links -->
-    <div text-center margin-top>
-      <span ion-text color="primary" tappable (click)="login()">I have an account</span>
+    <div text-center>
+      <span ion-text color="white" tappable (click)="login()"><u><b>I have an account</b></u></span>
     </div>
 
   </div>
