--- a/src/pages/search-location/search-location.html
+++ b/src/pages/search-location/search-location.html
@@ -1,7 +1,7 @@
 <!-- # -->
 <ion-header>
 
-  <ion-navbar color="primary">
+  <ion-navbar color="verydark">
     <ion-input placeholder="Enter Destination" padding-left autofocus></ion-input>
   </ion-navbar>
 
