--- a/src/pages/sendpay/sendpay.html
+++ b/src/pages/sendpay/sendpay.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-    <ion-navbar color="primary">
+    <ion-navbar color="verydark">
       <button ion-button menuToggle>
         <ion-icon name="menu"></ion-icon>
       </button>
