--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -2,27 +2,30 @@
 <ion-header class="no-shadow">
 
   <ion-navbar class="no-border">
+      <button ion-button menuToggle>
+          <ion-icon name="menu"></ion-icon>
+      </button>
     <ion-title>
-      <ion-icon name="cog" class="text-primary"></ion-icon>
+      
       <span class="text-primary">Settings</span>
     </ion-title>
   </ion-navbar>
 
 </ion-header>
 
-<ion-content class="common-bg">
+<ion-content class="">
   
   <!-- App settings-->
-  <ion-item-group>
-    <ion-item-divider color="secondary" class="bold">App Settings</ion-item-divider>
-    <ion-item>
+  <ion-item-group style="background-color: transparent;">
+    <ion-item-divider  class="bold"  style="background-color: transparent;color:white">App Settings</ion-item-divider>
+    <ion-item style="background-color: transparent;">
       <span>Clear Private Data</span>
     </ion-item>
-    <ion-item>
+    <ion-item style="background-color: transparent;">
       <ion-label>Push Notifications?</ion-label>
       <ion-toggle checked="false"></ion-toggle>
     </ion-item>
-    <ion-item>
+    <ion-item style="background-color: transparent;">
       <span>Privacy Policy</span>
     </ion-item>
   </ion-item-group>  
