--- a/src/pages/trip-detail/trip-detail.html
+++ b/src/pages/trip-detail/trip-detail.html
@@ -1,7 +1,7 @@
 <!-- -->
 <ion-header>
 
-  <ion-navbar  color="primary">
+  <ion-navbar  color="verydark">
     <ion-title>
       <span ion-text>{{ trip.name }}</span>
     </ion-title>
