--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -17,15 +17,15 @@
   
   <!-- App settings-->
   <ion-item-group style="background-color: transparent;">
-    <ion-item-divider  class="bold"  style="background-color: transparent;color:white">App Settings</ion-item-divider>
-    <ion-item style="background-color: transparent;">
-      <span>Clear Private Data</span>
-    </ion-item>
+      <ion-item style="background-color: transparent;">
+          <ion-label color="white">User</ion-label>
+          <ion-input disabled  text-right value="john.doe@email.com"></ion-input>
+        </ion-item>
     <ion-item style="background-color: transparent;">
       <ion-label>Push Notifications?</ion-label>
       <ion-toggle checked="false"></ion-toggle>
     </ion-item>
-    <ion-item style="background-color: transparent;">
+    <ion-item style="background-color: transparent;" class="hide">
       <span>Privacy Policy</span>
     </ion-item>
   </ion-item-group>  
