last last changes from todd

--- a/src/pages/makeapaymenthome/makeapaymenthome.html
+++ b/src/pages/makeapaymenthome/makeapaymenthome.html
@@ -23,7 +23,7 @@
          
           <ion-searchbar animated></ion-searchbar>
         </ion-card-header>
-        <ion-card-content color="primary">
+        <ion-card-content color="verydark">
           
             <div class="row header">
                 <div class="col">Date</div>
