--- a/src/pages/sendpay-filled/sendpay-filled.html
+++ b/src/pages/sendpay-filled/sendpay-filled.html
@@ -18,12 +18,15 @@
 
 
 <ion-content padding color="black" style="">
-  <ion-card>
+  <ion-card no-margin margin-bottom class="full-width">
       <ion-card-header style="padding: 13px 21px 0px;">
          <h1 color="black">John Doe</h1> 
         <div style="padding-top: 5px;">john@email.com</div>
         <div>(310) 555-5555</div>
-        
+        <hr />
+        <span class="text-center" style="text-transform: lowercase;">XXXX-XXXX-XXXX-1234</span>
+        <button ion-button class="round big hide" color="grey" block disabled>
+            <ion-icon name="card" item-start class="" style="margin-top: 0px;padding: 5px;"></ion-icon> XXXX-XXXX-XXXX-1234 </button>
       </ion-card-header>
     <ion-card-content>
     <!-- payment form -->
