--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -25,7 +25,7 @@
       <ion-label>Push Notifications?</ion-label>
       <ion-toggle checked="false"></ion-toggle>
     </ion-item>
-    <ion-item style="background-color: transparent;" class="hide">
+    <ion-item style="background-color: transparent;" class="" tappable Onclick="alert('This will open a new tab in your web browser.'); return window.open('https://www.paidyet.com/privacy');">
       <span>Privacy Policy</span>
     </ion-item>
   </ion-item-group>  
