--- a/src/pages/trips/trips.html
+++ b/src/pages/trips/trips.html
@@ -85,13 +85,22 @@
             </ion-item>
           </ion-col>
       
-          <ion-col col-12>
+          <ion-col col-6>
             <ion-item>
                 <ion-label floating>
                   <ion-icon name="home" item-start class="text-primary"></ion-icon>
                   Zip Code
                 </ion-label>
                 <ion-input type="text" value="90001" disabled></ion-input>
+            </ion-item>
+          </ion-col>
+          <ion-col col-6>
+            <ion-item>
+                <ion-label floating>
+                  <ion-icon name="home" item-start class="text-primary"></ion-icon>
+                  State
+                </ion-label>
+                <ion-input type="text" value="CA" disabled></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
